fix caption mobile

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -220,7 +220,7 @@ h2 {
     flex-direction: column;
   }
 	.hero .caption-image{
-		top: calc(100dvh - 13em);
+		top: calc(100dvh - 9em);
 	}
   .hero .caption-image p {
     font-size: 1.2rem;
